HW6 Compare, getAllSorted