@@ -4,17 +4,18 @@ import com.urise.webapp.model.Resume;
 
 import java.util.ArrayList;
 import java.util.Arrays;
+import java.util.Comparator;
 import java.util.List;
-
 /**
  * Array based com.urise.webapp.storage for Resumes
  */
 public class ArrayStorage extends AbstractArrayStorage {
 
-
     @Override
     public List<Resume> getAllSorted() {
-        return new ArrayList<>(Arrays.asList(Arrays.copyOf(storage, size())));
+        List<Resume> storageSorted = new ArrayList<>(List.of(Arrays.copyOf(storage, resumeQuantity)));
+        storageSorted.sort(Comparator.comparing(Resume :: getUuid).thenComparing(Resume :: getFullName));
+        return storageSorted;
     }
 
     @Override
@@ -53,11 +54,5 @@ public class ArrayStorage extends AbstractArrayStorage {
         }
         return -1;
     }
-
-    @Override
-    protected Object getSearchKeyName(String fullName) {
-        return fullName;
-    }
-
 }
 
